tests/ui/shape_macros/cursor_non_unique.stderr
error: Failed to parse schema: Schema file 'prax/schema.prax' not found. Searched in:
         - CARGO_MANIFEST_DIR/prax/schema.prax
         - (absolute) prax/schema.prax
         - (current_dir) prax/schema.prax
 --> tests/ui/shape_macros/cursor_non_unique.rs:4:1
  |
4 | prax_orm::prax_schema!("prax/schema.prax");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `prax_orm::prax_schema` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cursor field `name` is not a unique column. Use a field marked `@id` or `@unique`.
 --> tests/ui/shape_macros/cursor_non_unique.rs:8:9
  |
8 |         name: "Alice",
  |         ^^^^
